--- a/source/config
+++ b/source/config
@@ -3,3 +3,4 @@ author: Thomas Leo
 url_include_index: True
 url_pattern: "/{category}/{slug}/{page}/index.html"
 relative_urls: False
+output_dir: ../
